tests/machine/x/c/save_jsonl_stdout.error
exit status 1
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c:339:14: error: incompatible type for argument 1 of ‘_save_json’
  339 |   _save_json(people, "-");
      |              ^~~~~~
      |              |
      |              people_t *
/workspace/mochi/tests/machine/x/c/save_jsonl_stdout.c:294:40: note: expected ‘list_map_string’ but argument is of type ‘people_t *’
  294 | static void _save_json(list_map_string rows, const char *path) {
      |                        ~~~~~~~~~~~~~~~~^~~~
